--- a/packages/generator-tailwind/templates/layout.hbs
+++ b/packages/generator-tailwind/templates/layout.hbs
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>{{#if post}}{{post.title}} - {{/if}}{{#if page}}{{page.title}} - {{/if}}{{blog.site.title}}</title>
   <meta name="description" content="{{#if post}}{{post.description}}{{else if page}}{{page.description}}{{else}}{{blog.site.description}}{{/if}}">
-  <link rel="stylesheet" href="/templates/tailwind.css">
+  <link rel="stylesheet" href="/main.css">
   <link rel="alternate" type="application/rss+xml" title="{{blog.site.title}} RSS Feed" href="/rss.xml">
   {{#if blog.site.url}}
   <link rel="canonical" href="{{blog.site.url}}">
