--- a/packages/generator-tailwind/templates/layout.hbs
+++ b/packages/generator-tailwind/templates/layout.hbs
@@ -6,6 +6,7 @@
   <title>{{#if post}}{{post.title}} - {{/if}}{{#if page}}{{page.title}} - {{/if}}{{blog.site.title}}</title>
   <meta name="description" content="{{#if post}}{{post.description}}{{else if page}}{{page.description}}{{else}}{{blog.site.description}}{{/if}}">
   <link rel="stylesheet" href="/main.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/styles/atom-one-dark.min.css">
   <link rel="alternate" type="application/rss+xml" title="{{blog.site.title}} RSS Feed" href="/rss.xml">
   {{#if blog.site.url}}
   <link rel="canonical" href="{{blog.site.url}}">
@@ -43,5 +44,9 @@
       </p>
     </footer>
   </div>
+
+  <!-- Syntax Highlighting -->
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/11.9.0/highlight.min.js"></script>
+  <script>hljs.highlightAll();</script>
 </body>
 </html>
